[gd_scene load_steps=10 format=2]

[ext_resource path="res://gamesetup.gd" type="Script" id=1]
[ext_resource path="res://assets/main_font_small.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/main_font_large.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/main_font_medium.tres" type="DynamicFont" id=4]
[ext_resource path="res://assets/main_font_tiny.tres" type="DynamicFont" id=5]
[ext_resource path="res://no.gd" type="Script" id=6]
[ext_resource path="res://opponent_selector.gd" type="Script" id=7]
[ext_resource path="res://assets/sounds/00 - Desktop - tos keypress7.ogg" type="AudioStream" id=8]
[ext_resource path="res://OptionButton.gd" type="Script" id=9]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TopBar" type="ColorRect" parent="ColorRect/VBoxContainer"]
editor/display_folded = true
margin_right = 600.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
size_flags_horizontal = 3
color = Color( 0.0901961, 0.0901961, 0.0901961, 1 )

[node name="Label" type="Label" parent="ColorRect/VBoxContainer/TopBar"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 2 )
text = "SETUP"
align = 1
valign = 1

[node name="body" type="ColorRect" parent="ColorRect/VBoxContainer"]
margin_top = 44.0
margin_right = 600.0
margin_bottom = 644.0
rect_min_size = Vector2( 0, 600 )
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.0431373, 0.0431373, 0.0431373, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/VBoxContainer/body"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_right = -20.0

[node name="Control3" type="Control" parent="ColorRect/VBoxContainer/body/VBoxContainer"]
margin_right = 560.0
margin_bottom = 15.0
rect_min_size = Vector2( 0, 15 )

[node name="Title" type="Label" parent="ColorRect/VBoxContainer/body/VBoxContainer"]
margin_top = 19.0
margin_right = 560.0
margin_bottom = 48.0
custom_fonts/font = ExtResource( 3 )
text = "SKIRMISH"
align = 1

[node name="Control" type="Control" parent="ColorRect/VBoxContainer/body/VBoxContainer"]
margin_top = 52.0
margin_right = 560.0
margin_bottom = 102.0
rect_min_size = Vector2( 0, 50 )

[node name="Narrative" type="Label" parent="ColorRect/VBoxContainer/body/VBoxContainer"]
margin_top = 106.0
margin_right = 560.0
margin_bottom = 238.0
size_flags_vertical = 3
custom_fonts/font = ExtResource( 4 )
text = "Open combat in close quarters. 




"
align = 3
autowrap = true

[node name="GridContainer" type="GridContainer" parent="ColorRect/VBoxContainer/body/VBoxContainer"]
margin_top = 242.0
margin_right = 560.0
margin_bottom = 374.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 4

[node name="checklabel" type="Control" parent="ColorRect/VBoxContainer/body/VBoxContainer/GridContainer"]
editor/display_folded = true
visible = false
margin_right = 184.0
margin_bottom = 79.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="ColorRect/VBoxContainer/body/VBoxContainer/GridContainer/checklabel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -73.5
margin_top = -14.0
margin_right = 73.5
margin_bottom = 14.0
custom_fonts/font = ExtResource( 5 )
text = "Stellar Objects"
align = 1
valign = 1

[node name="CheckButton" type="CheckButton" parent="ColorRect/VBoxContainer/body/VBoxContainer/GridContainer/checklabel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -38.0
margin_top = -53.3925
margin_right = 38.0
margin_bottom = -13.3925
disabled = true

[node name="checklabel2" type="Control" parent="ColorRect/VBoxContainer/body/VBoxContainer/GridContainer"]
editor/display_folded = true
visible = false
margin_right = 276.0
margin_bottom = 79.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="ColorRect/VBoxContainer/body/VBoxContainer/GridContainer/checklabel2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -73.5
margin_top = -14.0
margin_right = 73.5
margin_bottom = 14.0
custom_fonts/font = ExtResource( 5 )
text = "Collisions"
align = 1
valign = 1

[node name="CheckButton" type="CheckButton" parent="ColorRect/VBoxContainer/body/VBoxContainer/GridContainer/checklabel2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -38.0
margin_top = -53.3925
margin_right = 38.0
margin_bottom = -13.3925
disabled = true

[node name="checklabel3" type="Control" parent="ColorRect/VBoxContainer/body/VBoxContainer/GridContainer"]
visible = false
margin_right = 552.0
margin_bottom = 79.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="ColorRect/VBoxContainer/body/VBoxContainer/GridContainer/checklabel3"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -73.5
margin_top = -14.0
margin_right = 73.5
margin_bottom = 14.0
custom_fonts/font = ExtResource( 5 )
text = "Friendly Fire"
align = 1
valign = 1

[node name="CheckButton" type="CheckButton" parent="ColorRect/VBoxContainer/body/VBoxContainer/GridContainer/checklabel3"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -38.0
margin_top = -53.3925
margin_right = 38.0
margin_bottom = -13.3925
disabled = true

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect/VBoxContainer/body/VBoxContainer"]
margin_top = 378.0
margin_right = 560.0
margin_bottom = 407.0

[node name="title1" type="Label" parent="ColorRect/VBoxContainer/body/VBoxContainer/HBoxContainer"]
margin_top = 5.0
margin_right = 204.0
margin_bottom = 23.0
custom_fonts/font = ExtResource( 2 )
text = "Number of enemies"

[node name="no" type="Label" parent="ColorRect/VBoxContainer/body/VBoxContainer/HBoxContainer"]
margin_left = 208.0
margin_right = 560.0
margin_bottom = 29.0
size_flags_horizontal = 3
size_flags_vertical = 6
custom_fonts/font = ExtResource( 3 )
text = "#"
align = 2
script = ExtResource( 6 )

[node name="HSlider" type="HSlider" parent="ColorRect/VBoxContainer/body/VBoxContainer"]
margin_top = 411.0
margin_right = 560.0
margin_bottom = 451.0
rect_min_size = Vector2( 0, 40 )
min_value = 1.0
max_value = 3.0
value = 1.0
ticks_on_borders = true

[node name="Control2" type="Control" parent="ColorRect/VBoxContainer/body/VBoxContainer"]
margin_top = 455.0
margin_right = 560.0
margin_bottom = 480.0
rect_min_size = Vector2( 0, 25 )

[node name="title2" type="Label" parent="ColorRect/VBoxContainer/body/VBoxContainer"]
margin_top = 484.0
margin_right = 560.0
margin_bottom = 502.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
text = "Species"

[node name="Control5" type="Control" parent="ColorRect/VBoxContainer/body/VBoxContainer"]
margin_top = 506.0
margin_right = 560.0
margin_bottom = 526.0
rect_min_size = Vector2( 0, 20 )

[node name="HBoxContainer2" type="HBoxContainer" parent="ColorRect/VBoxContainer/body/VBoxContainer"]
margin_top = 530.0
margin_right = 560.0
margin_bottom = 570.0
rect_min_size = Vector2( 0, 25 )

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect/VBoxContainer/body/VBoxContainer/HBoxContainer2"]
margin_right = 560.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="selector_button" type="ColorRect" parent="ColorRect/VBoxContainer/body/VBoxContainer/HBoxContainer2/HBoxContainer"]
margin_right = 278.0
margin_bottom = 40.0
size_flags_horizontal = 3
color = Color( 0.521569, 0, 0, 1 )
script = ExtResource( 7 )
active_colour = Color( 0.443137, 0, 0, 1 )
inactive_colour = Color( 0, 0, 0, 1 )
black_colour = Color( 0, 0, 0, 1 )
white_colour = Color( 1, 1, 1, 1 )

[node name="Button" type="Button" parent="ColorRect/VBoxContainer/body/VBoxContainer/HBoxContainer2/HBoxContainer/selector_button"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "Klangons"
flat = true

[node name="selector_button2" type="ColorRect" parent="ColorRect/VBoxContainer/body/VBoxContainer/HBoxContainer2/HBoxContainer"]
margin_left = 282.0
margin_right = 560.0
margin_bottom = 40.0
size_flags_horizontal = 3
color = Color( 0.521569, 0, 0, 1 )
script = ExtResource( 7 )
controls = 1
active_colour = Color( 0, 0.356863, 0, 1 )
inactive_colour = Color( 0, 0, 0, 1 )
black_colour = Color( 0, 0, 0, 1 )
white_colour = Color( 1, 1, 1, 1 )

[node name="Button" type="Button" parent="ColorRect/VBoxContainer/body/VBoxContainer/HBoxContainer2/HBoxContainer/selector_button2"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "Ramulaks"
flat = true

[node name="selector_button3" type="ColorRect" parent="ColorRect/VBoxContainer/body/VBoxContainer/HBoxContainer2/HBoxContainer"]
visible = false
margin_left = 298.0
margin_right = 444.0
margin_bottom = 40.0
size_flags_horizontal = 3
color = Color( 0.521569, 0, 0, 1 )
script = ExtResource( 7 )

[node name="Button" type="Button" parent="ColorRect/VBoxContainer/body/VBoxContainer/HBoxContainer2/HBoxContainer/selector_button3"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "Scan"
flat = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="ColorRect/VBoxContainer/body/VBoxContainer/HBoxContainer2/HBoxContainer"]
stream = ExtResource( 8 )

[node name="OptionButton" type="OptionButton" parent="ColorRect/VBoxContainer/body/VBoxContainer/HBoxContainer2"]
visible = false
margin_right = 584.0
margin_bottom = 25.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 4 )
toggle_mode = true
flat = true
script = ExtResource( 9 )

[node name="Label" type="Label" parent="ColorRect/VBoxContainer/body/VBoxContainer/HBoxContainer2"]
visible = false
margin_top = 5.0
margin_right = 584.0
margin_bottom = 19.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "50%"
align = 1

[node name="Control4" type="Control" parent="ColorRect/VBoxContainer/body/VBoxContainer"]
margin_top = 574.0
margin_right = 560.0
margin_bottom = 599.0
rect_min_size = Vector2( 0, 25 )

[node name="Control" type="Control" parent="ColorRect/VBoxContainer"]
margin_top = 648.0
margin_right = 600.0
margin_bottom = 848.0
rect_min_size = Vector2( 0, 200 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Button" type="Button" parent="ColorRect/VBoxContainer"]
margin_top = 852.0
margin_right = 600.0
margin_bottom = 936.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
text = "Let's go!"

[node name="Button2" type="Button" parent="ColorRect/VBoxContainer"]
margin_top = 940.0
margin_right = 600.0
margin_bottom = 1024.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
text = "Cancel"
[connection signal="value_changed" from="ColorRect/VBoxContainer/body/VBoxContainer/HSlider" to="." method="_on_HSlider_value_changed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/body/VBoxContainer/HBoxContainer2/HBoxContainer/selector_button/Button" to="ColorRect/VBoxContainer/body/VBoxContainer/HBoxContainer2/HBoxContainer/selector_button" method="_on_Button_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/body/VBoxContainer/HBoxContainer2/HBoxContainer/selector_button2/Button" to="ColorRect/VBoxContainer/body/VBoxContainer/HBoxContainer2/HBoxContainer/selector_button2" method="_on_Button_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/body/VBoxContainer/HBoxContainer2/HBoxContainer/selector_button3/Button" to="ColorRect/VBoxContainer/body/VBoxContainer/HBoxContainer2/HBoxContainer/selector_button3" method="_on_Button_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/Button2" to="." method="_on_Button2_pressed"]
